✨ feat: navbar 顶部导航完成

--- a/src/assets/css/base.less
+++ b/src/assets/css/base.less
@@ -1,5 +1,8 @@
-@import url('./normalize.css');
+@import './normalize.css';
 * {
   padding: 0;
   margin: 0;
 }
+
+// tip 项目通用样式常量
+@color-tint: #fe647f;
