💄 购物车布局完成

--- a/src/assets/css/base.less
+++ b/src/assets/css/base.less
@@ -1,6 +1,13 @@
 @import './normalize.css';
 @import '../icons/style.css';
 
+// TIP 共用样式
+.text-more {
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
+}
+
 * {
   padding: 0;
   margin: 0;
